[project]
name = "ml-basics"
description = "A basic machine learning project template"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas~=2.3.1",
    "numpy~=2.3.2",
    "matplotlib~=3.10.5",
    "seaborn~=0.13.2",
    "scikit-learn~=1.7.1",
    "hdbscan~=0.8.40",
    "networkx~=3.5",
    "sentence-transformers~=5.1.0",
    "transformers~=4.55.0",
    "torch~=2.8.0",
    "wordcloud~=1.9.4",
    "faker~=37.5.3",
    "huggingface-hub~=0.34.4",
    "hf-xet~=1.1.7",
    "pyarrow~=21.0.0",
    "faiss-cpu~=1.12.0",
    "plotly~=6.3.0",
    "ipykernel~=6.30.1",
    "statsmodels~=0.14.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This tells setuptools that the actual code lives in 'src'
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# This automatically finds all sub-packages (folders with __init__.py) inside 'src'
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
# If you have non-python files (like .csv or .json) inside your packages
"*" = ["*.csv", "*.json"]